icons and tips added

--- a/fontello.config.json
+++ b/fontello.config.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "arrow-down",
   "css_prefix_text": "icon-",
   "css_use_suffix": false,
   "hinting": true,
@@ -7,16 +7,22 @@
   "ascent": 850,
   "glyphs": [
     {
-      "uid": "ccddff8e8670dcd130e3cb55fdfc2fd0",
-      "css": "down-open",
-      "code": 59392,
+      "uid": "e4dde1992f787163e2e2b534b8c8067d",
+      "css": "angle-down",
+      "code": 61703,
       "src": "fontawesome"
     },
     {
-      "uid": "f0eac0958921fe45b85d01b79d76e86b",
-      "css": "switch",
-      "code": 59393,
-      "src": "entypo"
+      "uid": "5de9370846a26947e03f63142a3f1c07",
+      "css": "angle-up",
+      "code": 61702,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "6020aff067fc3c119cdd75daa5249220",
+      "css": "exchange",
+      "code": 61676,
+      "src": "fontawesome"
     }
   ]
 }
